[Linux] Fix and improve format handling in DMABufFormat, TextureMapperPlatformLayerProxyDMABuf https://bugs.webkit.org/show_bug.cgi?id=241326

Patch by Žan Doberšek <zdobersek@igalia.com> on 2022-06-06
Reviewed by Miguel Gomez.

In the DMABufFormat header, VYUY and AYUV format definitions are fixed to use
the correct FourCC values. In DMABufFormat::create(), a macro is used to map
FourCC values to corresponding DMABufFormat definitions.

In TextureMapperPlatformLayerProxyDMABuf, missing packed-YUV formats are
added to the switch statement, and properly ordered.

* Source/WebCore/platform/graphics/gbm/DMABufFormat.h:
(WebCore::DMABufFormat::create<DMABufFormat::FourCC::VYUY>):
(WebCore::DMABufFormat::create<DMABufFormat::FourCC::AYUV>):
(WebCore::DMABufFormat::create):
* Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerProxyDMABuf.cpp:
(WebCore::TextureMapperPlatformLayerProxyDMABuf::DMABufLayer::paintToTextureMapper):

Canonical link: https://commits.webkit.org/251326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295280 268f45cc-cd09-0410-ab3c-d52691b4dbfc